@@ -1,15 +1,17 @@
+# Generated by mksrcinfo v8
+# Mon Dec 14 23:33:40 UTC 2015
 pkgbase = lwjgl
 	pkgdesc = Lightweight Java Game Library - for use in game projects in Java.
-	pkgver = 3.0.0a
+	pkgver = 3.0.0b
 	pkgrel = 1
 	url = http://lwjgl.org/
 	changelog = ChangeLog
 	arch = any
 	license = BSD
 	options = !strip
-	source = http://build.lwjgl.org/release/3.0.0a/lwjgl-3.0.0a.zip
-	md5sums = 3198c644b983c20534d58cf2d8e3f029
-	sha1sums = baa3bb9ac71040c675ba717198a424e7c086c90e
+	source = https://github.com/LWJGL/lwjgl3/releases/download/3.0.0b/lwjgl-3.0.0b.zip
+	md5sums = 61d15b686bebddfeee5b17774039b236
+	sha1sums = 37a95095ab4c0d9be8ecf2d5d6da95ca21c8ce81
 
 pkgname = lwjgl
 
