@@ -1,3 +1,9 @@
+2015-12-14 Frederik “Freso” S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-3.0.0b-1 :
+	Version bump.
+	See https://github.com/LWJGL/lwjgl3/releases/tag/3.0.0b for upstream changelog.
+
 2015-07-19 Frederik “Freso” S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-3.0.0a-1 :
